------
v2.3.7
------




------
v2.3.6
------

[jan] Fix regular expression error with PHP 7.3 (Remi Collet
      <remi@remirepo.net>, PR 1).



------
v2.3.5
------

[jan] SECURITY: Fix XSS via data:text/html content of form action and xlink
      attributes (Reported by Liuzhu <fantasy7082@hotmail.com>).


------
v2.3.4
------

[jan] Update Greek translation (Limperis Antonis <limperis@cti.gr>).


------
v2.3.3
------

[jan] Mark PHP 7 as supported.


------
v2.3.2
------

[jan] Fix Composer file.


------
v2.3.1
------

[mjr] Prevent malformed urls from leaking exceptions (Bug #13965).
[jan] Fix issues with certain locales like Turkish.


------
v2.3.0
------

[mjr] Fix failing tests on MacOS related to mulitbyte data contained in links.
[mjr] Add nestingLimit parameter to Html2text filter.
[jan] Add 'html' hint to Simplemarkup filter to indicate the input format.
[jan] Match simple markup spanning a complete line too.


------
v2.2.2
------

[jan] Support loading translations from Composer-installed package.
[jan] Improve PSR-2 compatibility.
[mms] Support display of IDN domains in URLs.


------
v2.2.1
------

[mms] Javascript minification has been deprecated and moved to the
      Horde_JavascriptMinify package.


------
v2.2.0
------

[mms] Move JSMin code to a separate package.


------
v2.1.5
------

[mms] Fix issue from upstream jsmin.c that was breaking parsing of a keyword
      immediately followed by a regexp (Bug #12787).


------
v2.1.4
------

[mms] Merge upstream updates to JsMin filter.


------
v2.1.3
------

[mms] Yet more sanity checking in the Text2html filter to workaround incorrect
      charset information.


------
v2.1.2
------

[mms] Handle non-supported htmlspecialchars() charsets in the Text2html filter
      (Bug #12253).


------
v2.1.1
------

[mms] If a preg call exceeds the backtrack limit, fallback to the original text
      (Bug #12152).


------
v2.1.0
------

[mms] Add 'words' option to the Words filter.


------
v2.0.5