@@ -3,7 +3,7 @@
  <name>Horde_Text_Filter</name>
  <channel>pear.horde.org</channel>
  <summary>Text filtering and conversion library</summary>
- <description>Common methods for fitering and converting text.</description>
+ <description>A library for fitering and converting text.</description>
  <lead>
   <name>Jan Schneider</name>
   <user>jan</user>
@@ -22,7 +22,7 @@
   <email>slusarz@horde.org</email>
   <active>no</active>
  </developer>
- <date>2018-12-30</date>
+ <date>2021-02-13</date>
  <version>
   <release>2.3.7</release>
   <api>2.3.0</api>
@@ -33,7 +33,8 @@
  </stability>
  <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
  <notes>
-* 
+* [mjr] SECURITY: Fix XSS via Text2Html filter (Reported by: Alex Birnberg&lt;birnbergalex@gmail.com&gt;, CVE 2021-26929)
+* |+
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -382,6 +383,13 @@
     <min>1.0.0</min>
     <max>2.0.0alpha1</max>
     <exclude>2.0.0alpha1</exclude>
+   </package>
+   <package>
+    <name>Horde_Secret</name>
+    <channel>pear.horde.org</channel>
+    <min>2.0.0</min>
+    <max>3.0.0alpha1</max>
+    <exclude>3.0.0alpha1</exclude>
    </package>
    <package>
     <name>Horde_Util</name>
@@ -1206,7 +1214,8 @@
    <date>2018-12-30</date>
    <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
    <notes>
-* 
+* [mjr] SECURITY: Fix XSS via Text2Html filter (Reported by: Alex Birnberg&lt;birnbergalex@gmail.com&gt;, CVE 2021-26929)
+* |+
    </notes>
   </release>
  </changelog>
